fix meduza, slon, scroll on iphone

--- a/app/assets/stylesheets/man.sass
+++ b/app/assets/stylesheets/man.sass
@@ -17,6 +17,7 @@ body
     height: calc(100% - 32px)
     top: 32px
     border: none
+    overflow-y: auto 
 
   #form
     position: absolute
